--- a/CyberSecBreach/Pipfile
+++ b/CyberSecBreach/Pipfile
@@ -6,8 +6,12 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-bokeh = "*"
-pandas = "*"
+bokeh = ">=1.0.4"
+pandas = ">=0.24.1"
+PyYAML = "==4.2b1"
 
 [requires]
 python_version = "3.5"
+
+[pipenv]
+allow_prereleases = true
